# generative-art

./: .gitignore  README.md  maya_import_script.py  pyproject.toml  requirements-dev.in  requirements.in  setup.py
.planning/: PROJECT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
docs/: algorithms.md  maya-usage-guide.md
src/generative_art/: __init__.py  __main__.py  animated_incandescent_perlin_flow.py  export.py  flow_field.py  fluffy_clouds.py  grass_flow_field.py  incandescent_perlin_flow.py
src/maya_grass/: USAGE.md  __init__.py  generator.py  wind.py
tests/unit/: test_animated_incandescent_perlin_flow.py  test_flow_field.py  test_incandescent_perlin_flow.py  test_maya_grass.py  test_maya_grass_init.py  test_noise_utils.py
