[build-system]
requires = ["setuptools >= 45.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.cruft]
skip = [".cruft.json", ".git/"]

[tool.coverage.run]
omit = [
    ".venv/*",
    "tests/*",
    "docs/*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self\\.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
ignore_errors = true

[tool.pytest.ini_options]
addopts = "-vv --doctest-modules --doctest-report ndiff"
doctest_optionflags= "NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL ELLIPSIS NUMBER"
testpaths = [
    "tests",
]
markers = [
    "e2e"
]

[tool.mypy]
ignore_missing_imports = true
warn_redundant_casts  = true
warn_return_any = true
warn_unused_ignores  = true
warn_unused_configs  = true
no_implicit_optional = true
namespace_packages = true
explicit_package_bases = true
warn_unreachable = true
show_error_context = true
mypy_path = "src"
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".venv",
    "build",
    ".git",
    "docs",
    ".mypy_cache",
]

# Same as Black.
line-length = 88

src = ["src"]
target-version = "py312"

[tool.ruff.lint]
select = [
    "E501",
    "E",
    "F",
    "W",
    "I",
    "D",
    "A",
    "ARG",
    "B",
    "BLE",
    "C",
    "DTZ",
    "EM",
    "ERA",
    "EXE",
    "FBT",
    "G",
    "ICN",
    "INP",
    "ISC",
    "N",
    "PD",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "Q",
    "RET",
    "RUF",
    "S",
    "SIM",
    "T",
    "TCH",
    "TID",
    "TRY",
    "UP",
    "YTT",
]
ignore = ["E501", "S101", "EM101", "TRY003", "EXE002"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "INP001"]
# generative art sketches use print for user feedback during execution
"src/generative_art/*_flow*.py" = ["T201", "FBT001", "FBT002", "PLR0913"]
"src/generative_art/*perlin*.py" = ["T201"]
# flow field module has complex algorithms (poisson disk sampling)
"src/generative_art/flow_field.py" = ["C901", "PLR0912", "PLR0915", "PLR0913"]
# CLI entry points have boolean positional args from click decorators
"src/generative_art/__main__.py" = ["FBT001", "T201"]
# noise utils has multi-parameter fBm functions (x, y, z, octaves, persistence, lacunarity)
"src/generative_art/noise_utils.py" = ["PLR0913"]
# maya grass plugin - complex terrain analysis and configurable methods
"src/maya_grass/*.py" = [
    "C901",      # terrain blob detection is inherently complex
    "PLR0913",   # methods need many config params
    "FBT001",    # boolean config options
    "FBT002",    # boolean default values for config
    "ARG002",    # some args reserved for maya-specific implementation
    "PLC0415",   # conditional imports for maya/non-maya environments
]


[tool.ruff.lint.isort]
known-first-party = ["generative_art"]


[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings.
convention = "google"


[tool.ruff.lint.mccabe]
max-complexity = 10